@startuml

package fiat_runner {

    class FiatlightGuiParams {
        + show_image_inspector: bool
        + runner_params: hello_imgui.RunnerParams
        + addons: immapp.AddOnsParams
    }

    class FiatlightGui {
        Runs an application
        that presents a function graph
        for a Fiatlight
        ---
        + functions_graph_gui
        + params
        ---
        + run()
    }

    FiatlightGui *-- FiatlightGuiParams

    class Functions <<free functions>> {
        + fiat_run(function, params)
        + fiat_run_composition(functions, params)
        + fiat_run_graph(graph, params)
    }

    Functions ... FiatlightGui: uses
}
note left of fiat_runner
    This module is the entry point
    for any fiatlight GUI application.
end note

fiat_runner.FiatlightGui *-- fiat_nodes.FunctionsGraphGui

@enduml
